--- a/app/src/main/res/layout/activity_detail_annonce.xml
+++ b/app/src/main/res/layout/activity_detail_annonce.xml
@@ -63,6 +63,8 @@
             android:layout_height="0dp"
             android:layout_weight="4"
             android:paddingTop="5dp"
+            android:layout_marginHorizontal="10dp"
+            android:scaleType="fitXY"
             android:src="@drawable/collection" />
 
 
@@ -77,7 +79,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
-                android:layout_margin="10dp"
+                android:layout_margin="12dp"
                 android:background="@drawable/bg_white_rounded_medium"
                 android:src="@drawable/user" />
 
